# openfisca-survey-manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  config.ini  config_template.ini  openfisca_bot  openfisca_bot.pub  pyproject.toml  raw_data_template.ini  setup.cfg  setup.py  test.py  toto.py  travis-release-tag.sh
.circleci/: config.yml  has-functional-changes.sh  publish-python-package.sh
.conda/: README.md  meta.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  get_pypi_info.py  has-functional-changes.sh  is-version-number-acceptable.sh  publish-python-package.sh  pyproject_version.py
.github/workflows/: workflow.yml
app/: requirements.txt
docs/: MIGRATION_IMPORTS.md  PLAN_AMELIORATIONS.md  REFACTORING_PLAN.md  RFC-001-OPENFISCA-DATA-STACK.md  RFC-002-METADATA-AND-CONFIG.md  TICKET_OPENFISCA_DATA_STACK.md  ZARR-BACKEND.md
openfisca-survey-manager/: patch.txt
openfisca_survey_manager/: __init__.py  aggregates.py  calibration.py  calmar.py  coicop.py  config.py  exceptions.py  google_colab.py  input_dataframe_generator.py  matching.py  paths.py  read_dbf.py  read_sas.py  read_spss.py  scenarios.py  simulation_builder.py  simulations.py  statshelpers.py  survey_collections.py  surveys.py  tables.py  temporary.py  utils.py  variables.py
openfisca_survey_manager/assets/: nomenclature_coicop_source_by_classes.csv
openfisca_survey_manager/assets/COICOP/1998/: nomenclature_coicop1998_source_by_divisions.csv  nomenclature_coicop1998_source_by_groupes.csv  nomenclature_coicop1998_source_by_postes.csv  nomenclature_coicop1998_source_by_sous_classes.csv
openfisca_survey_manager/assets/COICOP/2016/: nomenclature_coicop2016_source_by_classes.xls  nomenclature_coicop2016_source_by_divisions.xls  nomenclature_coicop2016_source_by_groupes.xls  nomenclature_coicop2016_source_by_postes.xls  nomenclature_coicop2016_source_by_sous_classes.xls
openfisca_survey_manager/common/: __init__.py  misc.py
openfisca_survey_manager/config_files_templates/: raw_data_template.ini
openfisca_survey_manager/configuration/: __init__.py  config_loader.py  models.py  paths.py
openfisca_survey_manager/core/: __init__.py  dataset.py  survey.py  table.py
openfisca_survey_manager/io/: __init__.py  backends.py  hdf.py  readers.py  writers.py
openfisca_survey_manager/policy/: __init__.py  aggregates.py  calibration.py  calmar.py  coicop.py  legislation_asof.py  matching.py  simulation_builder.py  simulations.py  statshelpers.py  variables.py
openfisca_survey_manager/policy/scenarios/: __init__.py  abstract_scenario.py  reform_scenario.py
openfisca_survey_manager/policy/tests/: __init__.py  test_aggregates.py  test_compute_pivot_table.py  test_compute_winners_losers.py  test_summarize_variables.py
openfisca_survey_manager/processing/: __init__.py  cleaning.py  harmonization.py
openfisca_survey_manager/processing/weights/: __init__.py  calibration.py  calmar.py
openfisca_survey_manager/scenarios/: __init__.py  abstract_scenario.py  reform_scenario.py
openfisca_survey_manager/scripts/: __init__.py  build_collection.py  migrate_config_to_rfc002.py  surv.py
openfisca_survey_manager/tests/: __init__.py  conftest.py  input_dataframe_generator.py  test_add_survey_to_collection.py  test_aggregates.py  test_asof_parameters.py  test_calibration.py  test_calmar.py  test_compute_aggregate.py  test_compute_pivot_table.py  test_compute_winners_loosers.py  test_compute_winners_losers.py  test_config_manifest_rfc002.py  test_coverage_boost.py  test_create_data_frame_by_entity.py  test_enum.py  test_legacy_imports.py  test_legislation_inflator.py  test_marginal_tax_rate.py  test_matching.py  test_parquet.py  test_pivot_table.py  test_quantile.py  test_read_dbf.py  test_read_sas.py  test_read_survey.py  test_scenario.py  test_scenario_csv.py  test_scenarios.py  test_store_backends.py  test_summarize_variables.py  test_surv.py  test_surveys.py  test_tax_benefit_system_asof.py  test_top_bottom_share.py  test_write_parquet.py
openfisca_survey_manager/tests/data_files/: calmar_data.py  config.ini  config_template.ini  fake.json  test_random_generator.json
openfisca_survey_manager/tests/data_files/test_parquet_collection/: test.parquet
openfisca_survey_manager/tests/data_files/test_parquet_collection_2020/: household  person
